# software_rayTracer

./: CMakeLists.txt
include/: HitAlbe.hpp  HitRecord.hpp  Sphere.hpp
include/rt/: PrintColor.hpp  Vec3.hpp  ray.hpp
include/rt/globals/: globals.hpp
include/rt/utils/: utils.hpp
src/: Sphere.cpp  main.cpp
